onlyoffice/of-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onlyoffice
  namespace: onlyoffice
  labels:
    app: onlyoffice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: onlyoffice
  template:
    metadata:
      labels:
        app: onlyoffice
    spec:
      containers:
        - image: onlyoffice/documentserver
          name: onlyoffice
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - mountPath: /etc/onlyoffice/documentserver
              name: of-persistent-storage
      volumes:
        - name: of-persistent-storage
          persistentVolumeClaim:
            claimName: onlyoffice
