onlyoffice/of-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: onlyoffice
  namespace: onlyoffice
  labels:
    app: onlyoffice
spec:
  selector:
    app: onlyoffice
  type: ClusterIP
  ports:
   - port: 80
     name: http
